--- a/Rulesets/doctor_subclasses.yaml
+++ b/Rulesets/doctor_subclasses.yaml
@@ -9,11 +9,11 @@
     - content: You have begun experimenting with new methods to improve life. you may attempt to transplant an organ from one creature to another. The organ must be from a living creature or one that has died in the last 
                24 hours. Examples are eyes from a creature with darkvision, stomach from a creature inmmune to poison, or replace a limb with one from a smiilar creature. the process takes 2 hours to complete and takes 2 
                days to recover from. This requres a Medicine check from the chart below, The DM determines the difficulty level;
-               Difficulty   DC     Example
-               Simple       DC15   Human Leg
-               Moderate     DC20   Elf Eyes
-               Difficult    DC25   Dragon Stomach
-               Complex      DC30   Beholder Eye Stalk
+    - content: Difficulty   DC     Example
+    - content: Simple       DC15   Human Leg
+    - content: Moderate     DC20   Elf Eyes
+    - content: Difficult    DC25   Dragon Stomach
+    - content: Complex      DC30   Beholder Eye Stalk
     - title: Bedside Manner
     - content: You have discovered a number of ways to maximize the recovery of injured individuals. During a short rest, whenever an ally expends a hit die to heal, they automatically gain the maximum Hit Points 
                allowed for hat hit die.
@@ -30,12 +30,12 @@
     - content: Your doctor's bag has been modified to accommodate your specialization. It functions as normal but also replaces the need for Alchemist's Supplies, Herbalism Kit and Poisoner's Kit
     - title: Routine Brewer
     - content: You have made crafting healing potions a daily part of your life and it takes considerably less time and effort to craft them. Use the chart below
-               Potion                          Crafting Time           Cost
-               Antitoxin                       1 Hour                  25gp
-               Potion of Healing               2 Hours                 25gp
-               Potion of Greater Healing       6 Hours                 125gp
-               Potion of Superior Healing      12 Hours                2,500gp
-               Potion of Supreme Healing       24 Hours                25,000gp
+    - content: Potion                          Crafting Time           Cost
+    - content: Antitoxin                       1 Hour                  25gp
+    - content: Potion of Healing               2 Hours                 25gp
+    - content: Potion of Greater Healing       6 Hours                 125gp
+    - content: Potion of Superior Healing      12 Hours                2,500gp
+    - content: Potion of Supreme Healing       24 Hours                25,000gp
     - title: Healing Cloud
     - content: You have experimented with enough healing potions to discover a new delivery method. You can use an Action to inject a healing potion with a chemical agent which instantly transforms it into a gas. 
                Instead of consuming the potion, you immediately smash the bottle, releasing a mist. You and all living creatures within 5 feet of you benefit from the potions healing
@@ -47,12 +47,12 @@
                learn its formula by researching its components. The rarity of the potion determines the time it takes you to study it, at the end of which you must make a medicine check. On a success you gain the 
                ability to craft that potion, however the original potion is destroyed regardless of seccess or failure. Crafting the potion cost half the potions value in materials and an amount of time determined
                by its rarity in the chart below
-               Rarity               Difficulty         Crafting Time
-               Common Potion          DC15              2 Hours
-               Uncommon Potion        DC20              6 Hours
-               Rare Potion            DC25              12 Hours
-               Very Rare Potion       DC30              24 Hours
-               Legendary Potion       DC40              48 Hours
+    - content: Rarity               Difficulty         Crafting Time
+    - content: Common Potion          DC15              2 Hours
+    - content: Uncommon Potion        DC20              6 Hours
+    - content: Rare Potion            DC25              12 Hours
+    - content: Very Rare Potion       DC30              24 Hours
+    - content: Legendary Potion       DC40              48 Hours
     - title: Master Alchemist
     - content: You gain one of the following features of your choice
     - title: Quantity of Quality
@@ -72,19 +72,19 @@
     - content: You can attack twice, instead of once, whenever you take the Attack action on your turn.
     - title: Survival Tactics
     - content: You gain one of the following features.
-               Mild Mannered - Any creature who targets you with an attack or harmful spell must first make a Wisdom saving throw or choose a new target. If you make an attack, or deal damage to another creature, this
+    - content: Mild Mannered - Any creature who targets you with an attack or harmful spell must first make a Wisdom saving throw or choose a new target. If you make an attack, or deal damage to another creature, this
                                ability ends.
-               Frantic Strike - When surrounded by foes you lash out wildly. You can use your action to make a basic melee attack roll against any number of creatures within 5 feet of you, with a separate attack roll 
+    - content: Frantic Strike - When surrounded by foes you lash out wildly. You can use your action to make a basic melee attack roll against any number of creatures within 5 feet of you, with a separate attack roll 
                                 for each.
-               Flash Flask - As a bonus action you throw a pre-prepared flask to the ground, the volatile mixture exploding in a flash of light. Any attacks made against you until the start of your next turn are made 
+    - content: Flash Flask - As a bonus action you throw a pre-prepared flask to the ground, the volatile mixture exploding in a flash of light. Any attacks made against you until the start of your next turn are made 
                              at disadvantage. You cannot do this again until your next short rest.
     - title: Disable Organ
     - content: You have begun to recognize the weak points common in many creatures. You attempt to make a precise strike against an enemy in order to weaken it. Choose an effect below and make a regular attack roll. If
                successful rather than doing damage the target must make a saving throw or suffer your ability’s effect. This effect lasts until the target is healed.
-               Cripple - You target a limb, such as a leg or a wing, in order to inhibit a creature’s movement. On a success the the target's speed is reduced by half.
-               Blind - You target the eye or eyes of a creature in order to visually impair it. Depending on the creature the DM decides how and if it can be blinded. DEX save.
-               Disarm - You target an extremity, such as a hand or claw, that is holding an item. On a success the creature drops the item and their extrimity is disabled. STR save.
-               Disable - You target a unique organ in order to disable a creature’s natural ability, such as its fire breath or poisonous sting. Your DM may determine an ability cannot be disabled in this way. CON save.
+    - content: Cripple - You target a limb, such as a leg or a wing, in order to inhibit a creature’s movement. On a success the the target's speed is reduced by half.
+    - content: Blind - You target the eye or eyes of a creature in order to visually impair it. Depending on the creature the DM decides how and if it can be blinded. DEX save.
+    - content: Disarm - You target an extremity, such as a hand or claw, that is holding an item. On a success the creature drops the item and their extrimity is disabled. STR save.
+    - content: Disable - You target a unique organ in order to disable a creature’s natural ability, such as its fire breath or poisonous sting. Your DM may determine an ability cannot be disabled in this way. CON save.
     - title: Adrenaline Shot
     - content: You have experienced enough battles that the desire to slay your foes overpowers your instincts for self-preservation. As a bonus action you inject yourself with a concoction of your own creation 
                designed to improve your speed and reflexes. Your body surges with energy as you benefit from effects identical to that of the Haste spell. Unlike the spell however this ability lasts for 5 minutes. 
@@ -107,11 +107,11 @@
                a Medicine check, the DC of which is equal to the challenge rating of the creature plus 5. On a success, you harvest an organ that does one of the following, so long as the creature had that ability. You 
                may only attempt this ability once per dead creature. The organ can be used once to replicate the ability of the creature it came from, then it is destroyed. Any damage, modifiers, and save DCs are 
                identical to what they were when the creature was alive.
-               Poison - You extract the venom a creature uses. If the creature adds poison damage to any of it's attacks, you can harvest a vial of that poison. You may use a bonus action to apply the same poison to one 
+    - content: Poison - You extract the venom a creature uses. If the creature adds poison damage to any of it's attacks, you can harvest a vial of that poison. You may use a bonus action to apply the same poison to one 
                         of your weapons. The next time that weapon hits a creature in the next minute, they suffer the effects of that poison.
-               Breath weapon - You extract the gland responsible for a creature's breath attack. As an action, you can activate the gland and unleash it's deadly payload. 
-               Gaze effect - You extract the eyes or other part a creature uses for a gaze ability. As an action, you can activate that organ and use the gaze ability on a creature within range.
-               Innate spellcasting - You extract a biological element that produces magic. When you harvest this organ, choose a spell of 6th level or lower from the creature's innate spellcasting list. You can cast that 
+    - content: Breath weapon - You extract the gland responsible for a creature's breath attack. As an action, you can activate the gland and unleash it's deadly payload. 
+    - content: Gaze effect - You extract the eyes or other part a creature uses for a gaze ability. As an action, you can activate that organ and use the gaze ability on a creature within range.
+    - content: Innate spellcasting - You extract a biological element that produces magic. When you harvest this organ, choose a spell of 6th level or lower from the creature's innate spellcasting list. You can cast that 
                                      spell through the organ once, taking the spell's normal casting time. A wizard can also dissect the organ to transcribe that spell into their spellbook, as if it were a spell scroll. 
     - title: Adept Immunization
     - contnet: You've established a routine of administering small doses of poison to yourself in order to build up your body's defenses. You are immune to poison and disease. Whenever you make a constitution 
