--- a/Rulesets/feats.yaml
+++ b/Rulesets/feats.yaml
@@ -25,6 +25,10 @@
    - content: +1 in Con. or Wis., proficiency with cook's utensils and cook special food to regain hp.
    - title: Competent
    - content: +1 in one ability and you gain proficiency in one skill using this ability.
+   - title: Contortionist
+   - content: Prerequisite - Dexterity 13 or Higher. You’ve developed an unimaginable level of flexibility and can contort your muscles disturbingly. You gain the following benefits - Increase your Dexterity score by 1, to a 
+              maximum of 20, You can gain an extra 5ft of reach when using weapons without the reach or two-handed property. As an action, you can make yourself one size smaller than your current size. You can only use an action
+              or a bonus action while small.
    - title: Crossbow Expert
    - content: You ignore the loading property of crossbows and don't have disadvantage for being in contact with a creature when you shoot.
    - title: Crusher
@@ -85,6 +89,8 @@
    - content: Prerequisite - Proficiency with medium armor. +1 in Str. and you gain proficiency with heavy armor.
    - title: Heavy Armor Master
    - content: Prerequisite - Proficiency with heavy armor. +1 in Str. and bludgeoning, piercing, and slashing damage are reduced by 3 if you are wearing an heavy armor.
+   - title: Indefinite Madness
+   - content: Gains a new character flaw from the Indefinite Madness table that lasts until cured.
    - title: Infernal Constitution
    - content: Prerequisite - Tiefling. +1 in Con., resistance to cold and poison damage, and you have advantage on saving throws against being poisoned.
    - title: Inspiring Leader
@@ -157,6 +163,9 @@
    - content: Your ranged attacks ignore some cover, no disavantage at long range, and possibility to take -5 to hit for +10 on ranged damage.
    - title: Shield Master
    - content: Attack also allows to shove, shield bonus to Dex. saving throws againts spells, and no 1/2 damage on successful saving throw.
+   - title: Silver Tracery
+   - content: Prerequisite - Warforged. Alchemical silver tracery covers your body, allowing you to overcome the supernatural defenses of certain creatures and protecting against some magical attacks. Your natural weapons and 
+              your grapple checks made to deal damage are treated as silvered weapons for the purpose of overcoming damage reduction. As well, you gain a +1 bonus on Fortitude saves against spells and spell-like abilities.
    - title: Skill Expert
    - content: +1 in one ability, proficiency in one skill and expertise in one other in which you have proficiency.
    - title: Skilled
@@ -208,7 +217,7 @@
    - title: Tough
    - content: Your hit point maximum increases by an amount equal to twice your level then by +2 at each level.
    - title: Tower of Iron Will
-   - content: Prerequisite; Psionic Talent feature or Wild Talent feat. Your mind’s defenses are formidable. After you or another creature you can see within 30 feet of you fails a saving throw, you can use your 
+   - content: Prerequisite - Psionic Talent feature or Wild Talent feat. Your mind’s defenses are formidable. After you or another creature you can see within 30 feet of you fails a saving throw, you can use your 
               reaction to roll your Psionic Talent die and add the number rolled to the saving throw, potentially causing it to succeed.
    - title: Tracker
    - content: Increase your Wisdom score by 1, to a maximum of 20. You learn the hunter’s mark spell. You can cast it once without expending a spell slot, and you must finish a long rest before you can cast it in this way again.
