--- a/Rulesets/paladin subclasses.yaml
+++ b/Rulesets/paladin subclasses.yaml
@@ -330,10 +330,10 @@
                if you’re not incapacitated.
     - title: Invincible Conqueror
     - content: You gain the ability to harness extraordinary martial prowess. As an action, you can magically become an avatar of conquest, gaining the following benefits for 1 minute;
-               You have resistance to all damage.
-               When you take the Attack action on your turn, you can make one additional attack as part of that action.
-               Your melee weapon attacks score a critical hit on a roll of 19 or 20 on the d20.
-               Once you use this feature, you can’t use it again until you finish a long rest.
+    - content: You have resistance to all damage.
+    - content: When you take the Attack action on your turn, you can make one additional attack as part of that action.
+    - content: Your melee weapon attacks score a critical hit on a roll of 19 or 20 on the d20.
+    - content: Once you use this feature, you can’t use it again until you finish a long rest.
                                
                                
                                
@@ -372,10 +372,10 @@
     - title: Elder Champion
     - content: You can assume the form of an ancient force of nature, taking on an appearance you choose. For example, your skin might turn green or take on a bark-like texture, your hair might become leafy or 
                moss-like, or you might sprout antlers or a lion-like mane. Using your action, you undergo a transformation. For 1 minute, you gain the following benefits;
-               At the start of each of your turns, you regain 10 hit points.
-               Whenever you cast a paladin spell that has a casting time of 1 action, you can cast it using a bonus action instead.
-               Enemy creatures within 10 feet of you have disadvantage on saving throws against your paladin spells and Channel Divinity options.
-               Once you use this feature, you can't use it again until you finish a long rest.
+    - content: At the start of each of your turns, you regain 10 hit points.
+    - content: Whenever you cast a paladin spell that has a casting time of 1 action, you can cast it using a bonus action instead.
+    - content: Enemy creatures within 10 feet of you have disadvantage on saving throws against your paladin spells and Channel Divinity options.
+    - content: Once you use this feature, you can't use it again until you finish a long rest.
                          
                          
                          
@@ -408,10 +408,10 @@
     - content: You have advantage on saving throws to avoid becoming paralyzed or stunned.
     - title: Exalted Champion
     - content: Your presence on the field of battle is an inspiration to those dedicated to your cause. You can use your action to gain the following benefits for 1 hour;
-               You have resistance to bludgeoning, piercing, and slashing damage from nonmagical weapons.
-               Your allies have advantage on death saving throws while within 30 feet of you.
-               You have advantage on Wisdom saving throws, as do your allies within 30 feet of you.
-               This effect ends early if you are incapacitated or die. Once you use this feature, you can't use it again until you finish a long rest.
+    - content: You have resistance to bludgeoning, piercing, and slashing damage from nonmagical weapons.
+    - content: Your allies have advantage on death saving throws while within 30 feet of you.
+    - content: You have advantage on Wisdom saving throws, as do your allies within 30 feet of you.
+    - content: This effect ends early if you are incapacitated or die. Once you use this feature, you can't use it again until you finish a long rest.
                            
                            
                            
@@ -443,15 +443,15 @@
     - content: You have advantage on saving throws to avoid being charmed or frightened
     - title: Last Stand
     - content: As an action you can transform into an embodiment of martyrdom. For 1 minute, while in that form, you have the following benefits
-               You have resistance to all damage.
-               When you take the Attack action on your turn, you can make one additional attack as part of that action.
-               You emanate an aura in a 30-foot radius. The first time any enemy creature enters the aura or starts its turn there, the creature must succeeded on a Wisdom saving throw or become frightened of you for 1 
+    - content: You have resistance to all damage.
+    - content: When you take the Attack action on your turn, you can make one additional attack as part of that action.
+    - content: You emanate an aura in a 30-foot radius. The first time any enemy creature enters the aura or starts its turn there, the creature must succeeded on a Wisdom saving throw or become frightened of you for 1 
                minute. Attack rolls against the frightened creature have advantage.
-               While the aura lasts, the paladin can use a bonus action on their turn to cause a creature in the aura to suffer intense fear. The creature must make a Wisdom saving throw. On a failed save, the target 
+    - content: While the aura lasts, the paladin can use a bonus action on their turn to cause a creature in the aura to suffer intense fear. The creature must make a Wisdom saving throw. On a failed save, the target 
                takes psychic damage equal to 5d8 + the paladin's Charisma modifier.
-               When the transformation ends naturally, you fall unconscious for 1d4 hours.
-               This effect ends early if you are incapacitated or die.
-               Once you use this feature, you can't use it again until you finish a long rest.
+    - content: When the transformation ends naturally, you fall unconscious for 1d4 hours.
+    - content: This effect ends early if you are incapacitated or die.
+    - content: Once you use this feature, you can't use it again until you finish a long rest.
                      
                      
                      
@@ -484,10 +484,10 @@
                in this way, you expend 5 hit points from your pool of healing to grant resistance to the triggering damage until the end of the turn.
     - title: Avatar of Perseverance
     - content: As an action you can assume the form of an avatar of perseverance. You may dictate the form you take. Flightless wings, halo, etc. For the next minute, you gain the following benefits
-               You and up to 5 friendly creatures within 30 feet of you are under the effects of Death Ward for the duration.
-               Once per turn, if your Attack misses a target within range, you can turn the miss into a hit.
-               Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
-               Once you use this feature, you can't use it again until you finish a long rest.
+    - content: You and up to 5 friendly creatures within 30 feet of you are under the effects of Death Ward for the duration.
+    - content: Once per turn, if your Attack misses a target within range, you can turn the miss into a hit.
+    - content: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
+    - content: Once you use this feature, you can't use it again until you finish a long rest.
                                  
                                  
                                  
@@ -603,9 +603,9 @@
                darkness, or shadows, you silently fall only 60 feet per round and do not take falling damage.
     - title: Living Shadow
     - content: You become an incorporeal shadow as an action for 1 minute. You gain the following benefits;
-               You are resistant to non-magical bludgeoning, piercing, and slashing and become immune to necrotic damage.
-               You gain a flying speed equal to your walking speed and you can hover.
-               You can move through creatures and objects as if they were difficult terrain, but you take 1d10 force damage if you end your turn inside a creature or an object. If you move through a creature they must
+    - content: You are resistant to non-magical bludgeoning, piercing, and slashing and become immune to necrotic damage.
+    - content: You gain a flying speed equal to your walking speed and you can hover.
+    - content: You can move through creatures and objects as if they were difficult terrain, but you take 1d10 force damage if you end your turn inside a creature or an object. If you move through a creature they must
                make a constitution saving throw against your spell save DC on the start of their next turn. On a failed save they take 1d10 plus your charisma mod necrotic damage, can not take reactions on their turn 
                and their movement is reduced by half; on a succesful save they take half damage and their movement and reactions are unaffected.
                           
@@ -681,12 +681,12 @@
     - title: Savior of Souls
     - content: You can take the form of a Savior of Souls. You may gain a halo of radiant light, begin to exude a gentle aura, hush the sounds and levels of light around, or some other peaceful effect signaling your 
                transformation.
-               Using your action, you may undergo this transformation. For 1 minute, you gain the following effects
-               You may roll a number of hit die as an action, losing that much health and restoring it to all creatures within 10 feet of you.
-               Creatures you strike must roll a hit die. When they fall to the amount of HP rolled or lower they are incapacitated but blessed, and thus cannot fall to 0 hit points until they commit another evil 
+    - content: Using your action, you may undergo this transformation. For 1 minute, you gain the following effects
+    - content: You may roll a number of hit die as an action, losing that much health and restoring it to all creatures within 10 feet of you.
+    - content: Creatures you strike must roll a hit die. When they fall to the amount of HP rolled or lower they are incapacitated but blessed, and thus cannot fall to 0 hit points until they commit another evil 
                act. The player decides whether an act is evil, and a creature cannot be blessed more than once in its lifetime.
-               Allied creatures within 10 feet of you automatically pass saving throws, but you must make the same saving throws at disadvantage or suffer the effects.
-               Once you use this feature, you cannot use it again until you finish a long rest.
+    - content: Allied creatures within 10 feet of you automatically pass saving throws, but you must make the same saving throws at disadvantage or suffer the effects.
+    - content: Once you use this feature, you cannot use it again until you finish a long rest.
                           
                           
                           
@@ -759,10 +759,10 @@
     - content: If you are dealt damage by an attack or spell made by a hostile creature, you may use your reaction to reduce the damage by an amount equal to your paladin level
     - title: Chosen Slayer
     - content: You can spend an action to become your own kind of monster. You gain the following benefits for one minute
-               You and all your equipment become large, and you treat your total strength score as being 26.
-               You can't be paralyzed, stunned, or charmed
-               You can grapple creature that are two size categories larger than you.
-               Once you use this feature, you can't use it again until you finish a long rest.
+    - content: You and all your equipment become large, and you treat your total strength score as being 26.
+    - content: You can't be paralyzed, stunned, or charmed
+    - content: You can grapple creature that are two size categories larger than you.
+    - content: Once you use this feature, you can't use it again until you finish a long rest.
                         
                         
                         
@@ -795,11 +795,11 @@
     - content: Your Stern Gaze also affects Wisdom-based skill checks and Wisdom saving throws.
     - title: Wrath Of The Faith
     - content: You can directly channel the fury of your faith into combat. Using your action, you can undergo a transformation. For 1 minute you gain the following benefits
-               You gain the benefits of Stern Gaze against every creature within 60 feet of you.
-               When you use Divine Smite, deal an extra ld8 radiant damage.
-               You emanate an aura of menace in a 60-foot radius. The first time any enemy creature enters the aura or starts its turn there during a battle. the creature must succeed on a Wisdom saving throw or 
+    - content: You gain the benefits of Stern Gaze against every creature within 60 feet of you.
+    - content: When you use Divine Smite, deal an extra ld8 radiant damage.
+    - content: You emanate an aura of menace in a 60-foot radius. The first time any enemy creature enters the aura or starts its turn there during a battle. the creature must succeed on a Wisdom saving throw or 
                become frightened of you for 1 minute or until it takes any damage. Attack rolls against the frightened creatures have advantage.
-               Once you use this feature, you can't use it again until you finish a long rest.
+    - content: Once you use this feature, you can't use it again until you finish a long rest.
                              
                              
                              
@@ -873,10 +873,10 @@
                ability, you can't use it again until you finish a short or long rest.
     - title: Balance Bringer
     - content: You gain the ability to harness extraordinary powers of Mechanus. As a bonus action, you can become an avatar of balance, gaining the following benefits for 1 minute
-               Whenever you make an attack roH an ability check or a saving throw, you can treat a d20 roll of 9 or lower as a 10.
-               Whenever you make a damage rolL you can choose to deal half the maximum damage instead of rolling.
-               You have resistance to psychic, necrotic and radiant damage.
-               Once you use this feature, you can't use it again until you finish a long rest, unless you expend a 5th-level spell slot to use it again.
+    - content: Whenever you make an attack roH an ability check or a saving throw, you can treat a d20 roll of 9 or lower as a 10.
+    - content: Whenever you make a damage rolL you can choose to deal half the maximum damage instead of rolling.
+    - content: You have resistance to psychic, necrotic and radiant damage.
+    - content: Once you use this feature, you can't use it again until you finish a long rest, unless you expend a 5th-level spell slot to use it again.
                           
                           
                           
@@ -911,7 +911,7 @@
                away from the target.
     - title: Spirit of Freedom
     - content: Your liberating will manifests in full. None shall bind you. As a bonus action, you gain the following benefits for 1 minute
-               You are immune to being Paralyzed, Stunned, Grappled, or Restrained.
-               Your speed cannot be reduced, and you gain a magical flying speed equal to your walking speed.
-               If a hostile creature you can see subjects a friendly creature to the Paralyzed, Stunned, Grappled, or Restrained condition, you gain advantage on attack rolls against that hostile creature until the condition ends.
-               Once you use this bonus action, you can't do so again until you finish a long rest, unless you expend a 5th level spell slot to use it again.
+    - content: You are immune to being Paralyzed, Stunned, Grappled, or Restrained.
+    - content: Your speed cannot be reduced, and you gain a magical flying speed equal to your walking speed.
+    - content: If a hostile creature you can see subjects a friendly creature to the Paralyzed, Stunned, Grappled, or Restrained condition, you gain advantage on attack rolls against that hostile creature until the condition ends.
+    - content: Once you use this bonus action, you can't do so again until you finish a long rest, unless you expend a 5th level spell slot to use it again.
